--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "database",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "express": "^5.1.0"
-  }
+    "name": "aplikasi-pos-server",
+    "version": "1.0.0",
+    "description": "Backend POS",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "pg": "^8.11.3",
+        "body-parser": "^1.20.2"
+
+    },
+    "engines": {
+        "node": "18.x"
+    }
 }
